# Charter

./: .gitignore  CHANGELOG.md  CHARTER.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  charter.py  pyproject.toml
.charter/: charter.sha  ledger.head  ledger.jsonl
.github/ISSUE_TEMPLATE/: annotation-quality.md  bug_report.md
.github/workflows/: ci.yml  workflow.yml
demo/: ARCHITECTURE.md  fake_annotator.py  run_demo.sh
tests/: test_charter.py
