[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "charter"
version = "0.4.0"
description = "Executable design intent for AI-coded repos: the design document becomes the charter."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai-agents", "governance", "adr", "traceability", "claude-code", "intent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

# Fill in before the PyPI release:
# authors = [{ name = "..." }]
# [project.urls]
# Repository = "https://github.com/.../charter"

[project.scripts]
charter = "charter:main"

[tool.setuptools]
py-modules = ["charter"]
